# N-ary-Tree-Locking-Algorithm

./: .gitignore  INTERVIEW_COMPLETE_GUIDE.md  PROJECT_SUMMARY.md  README.md  nary_tree_lock.cpp  run_tests.bat
N-ary Tree Locking Algorithm/: CMakeLists.txt  MANUAL_TEST_GUIDE.md  README.md  TESTING_REPORT.md  main.cpp  nary_tree_lock.h
nary-latch-main/: FEATURES.md  QUICKSTART.md  README.md  index.html  test-lock-unlock.html
nary-latch-main/src/: index.css
nary-latch-main/src/components/: CodeViewer.tsx  TreeBuilder.tsx
nary-latch-main/src/lib/: nary-tree-lock.ts
nary-latch-main/src/pages/: Demo.tsx  Index.tsx
